# async-usb-host

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bus.rs  consts.rs  descriptor.rs  device_addr.rs  errors.rs  futures.rs  hot_potato.rs  lib.rs  macros.rs  pid.rs  pipe.rs  request.rs  types.rs
src/descriptor/: hid.rs  hub.rs  mod.rs
src/driver/: dfu.rs  hub.rs  kbd.rs  mod.rs
src/request/: mod.rs
