[package]
name = "async-usb-host"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
defmt = { version = "0.3.8", optional = true }
embassy-time = { version = "0.3.2", optional = true }
embassy-futures = { version = "0.1.0" }
static_assertions = "1.1.0"

[features]
defmt = ["dep:defmt"]
embassy = ["dep:embassy-time"]
