[package]
name = "async-usb-host"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
defmt = { version = "1.0", optional = true }
embassy-time = { version = "0.4.0" }
embassy-futures = { version = "0.1.0" }
static_assertions = "1.1.0"
embassy-sync = "0.7.0"
arrayvec = { version = "0.7.6", default-features = false }
bitvec = { version = "1.0.1", default-features = false }
usb-dfu-target = { version = "0.1.0" }

[features]
defmt = ["dep:defmt"]
